# Image-Duplicate-Finder

./: .gitignore  Application.py  CheckBoxFileDialog.py  Database.py  ErrorMessage.py  FilterImages.py  GetPaths.py  MainWindow.py  Progress.py  __init__.py  a.py  app.py  auxiliary.py  db.py  decorators.py  local.db  main.py  main_window_class.py  message_boxes.py  pyproject.toml  query.sql  requiremtents.txt  t.py  test.py
