[tool.poetry]
name = "duplicate-image-finder"
version = "0.1.0"
description = "Program for finding duplicate images and managing them."
authors = ["Mr.Resor <jakusienko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
PyQt5 = "=5.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
